--- a/README
+++ b/README
@@ -61,3 +61,35 @@ Alınan kararlar:Google Meet üzerinden kararlar alınmıştır.Toplantıda gör
 
 Sprint Retrospective 
   - Zaman daha dikkatli kullanılmalı.
+
+
+
+
+
+
+
+SPRİNT 2
+
+Sprint Notları:Gerekli görseller Google Dökümanlar üzerinden görüntülenebilir.
+
+Sprint board update: 
+Paylaşılan Sayfalar
+Giriş yap=Berkay -Sayfa tasarımı yapıldı
+Ana Sayfa=Beyza -sayfa tasarımı yapıldı
+Profil=Dilay
+Premium tanıtımı= Başar -sayfa hazır.
+
+Ürün Durumu:
+https://docs.google.com/document/d/1j2oWIfVeUYQT9qR6CkkhPVlBlTwQjom0neufuKpwJGI/edit?usp=sharing
+
+Scrum toplantısı Google Meet üzerinden olmuştur. Aşağıdaki ilişikte verilmiştir:
+https://docs.google.com/document/d/1j2oWIfVeUYQT9qR6CkkhPVlBlTwQjom0neufuKpwJGI/edit?usp=sharing
+
+Sprint Review 
+
+Alınan kararlar:Google Meet üzerinden kararlar alınmıştır.Giriş yap sayfası  ve ana sayfa için uygulama yazılmaya başlanacak.Profil sayfası için görüşmeler devam ediliyor. Premium seçenekler sayfası hazır,ekip üyelerinden onay alınacak.
+
+Sprint Retrospective 
+  - Profil sayfası için fiile geçilmeli
+  - Sayfaların durumları bitirilmeli
+
