--- a/README
+++ b/README
@@ -73,11 +73,11 @@ SPRİNT 2
 Sprint Notları:Gerekli görseller Google Dökümanlar üzerinden görüntülenebilir.
 
 Sprint board update: 
-Paylaşılan Sayfalar
+Paylaşılan Sayfaların Durumu
 Giriş yap=Berkay -Sayfa tasarımı yapıldı
-Ana Sayfa=Beyza -sayfa tasarımı yapıldı
+Ana Sayfa=Beyza -Sayfa tasarımı yapıldı
 Profil=Dilay
-Premium tanıtımı= Başar -sayfa hazır.
+Premium tanıtımı=Başar -Sayfa hazır.
 
 Ürün Durumu:
 https://docs.google.com/document/d/1j2oWIfVeUYQT9qR6CkkhPVlBlTwQjom0neufuKpwJGI/edit?usp=sharing
