--- a/README
+++ b/README
@@ -93,3 +93,36 @@ Sprint Retrospective
   - Profil sayfası için fiile geçilmeli
   - Sayfaların durumları bitirilmeli
 
+
+
+
+
+
+
+
+SPRİNT 3
+
+Sprint Notları:Gerekli görseller Google Dökümanlar üzerinden görüntülenebilir.Son Sprint.Projenin son hali.
+
+Sprint board update: 
+Paylaşılan Sayfaların Durumu
+Giriş yap=Berkay -Sayfa hazır.
+Ana Sayfa=Beyza -Sayfa hazır.
+Profil=Dilay -Sayfa iptal edildi.
+Premium tanıtımı=Başar -Sayfa hazır.
+
+Ürün Durumu:
+https://docs.google.com/document/d/1j2oWIfVeUYQT9qR6CkkhPVlBlTwQjom0neufuKpwJGI/edit?usp=sharing
+
+Scrum toplantısı Google Meet üzerinden olmuştur. Aşağıdaki ilişikte verilmiştir:
+https://docs.google.com/document/d/1j2oWIfVeUYQT9qR6CkkhPVlBlTwQjom0neufuKpwJGI/edit?usp=sharing
+
+Sprint Review 
+Projenin .apk çıktı alındı. Sayfalar hazır hale getirildi.Sayfaların birleştirilmesi yapıldı. Projenin son kontrolleri yapıldı.Ürün, teslime hazırlandı.
+
+Alınan kararlar: Google Meet üzerinden kararlar alınmıştır.Planlanan bazı özellikler iptal edildi ve uygulama sadeleştirildi.
+
+Sprint Retrospective 
+  -Zaman yönetimi iyileştirilmeli
+  -Görev paylaşımı daha iyi olmalı
+
