--- a/README
+++ b/README
@@ -126,3 +126,8 @@ Sprint Retrospective
   -Zaman yönetimi iyileştirilmeli
   -Görev paylaşımı daha iyi olmalı
 
+--- Google Dökümanlar linkleri olan kısımlar için proje klasörleri içindeki  "Sprintlerin İlişikleri.pdf" adlı dosyadan ulaşabilirsiniz. ---
+
+
+
+
